--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -119,7 +119,7 @@ div.global_error, tr.global_error{display: none;}
   margin-top: -20px;
 }
 
-/* Responsive: Portrait tablets and up */
+/* Responsive: Portrait tablets and down */
 @media screen and (max-width: 768px) {
   body{
     padding-top: 0;
